1단계 - 리팩터링(상품) (#288)
* build: upgrade to spring boot 3.2.5 and enable kotlin

* 리팩터링(상품) - createProduct

* 리팩터링(상품) - changePrice

* 리팩터링(상품) - queryHandler 분리

* 리팩터링(상품) - CommandHandler 로 변경

* 리팩터링(상품) - 출력삭제

* 리팩터링(상품): 생성자 및 검증 생성

* 리팩터링(상품): 생성자로 생성되도록 변경

* 리팩터링(상품): end of line

* style: 코드정렬

* feat: changePrice 변경

* feat: createProduct 변경

---------

Co-authored-by: wotjd243 <wotjd243@naver.com>